--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^4.0.0",
     "mui-markdown": "^1.0.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
