extension reads logged cookies from frontend

--- a/Chrome Extension/manifest.json
+++ b/Chrome Extension/manifest.json
@@ -2,7 +2,8 @@
   "name": "BookmarkAI",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "cookies"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html"
   },
