--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "markdown-to-jsx": "^7.2.1",
     "mui-markdown": "^1.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
