--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mui-markdown": "^1.0.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
