--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -4,7 +4,7 @@ anyio==3.7.0
 async-timeout==4.0.2
 attrs==23.1.0
 Authlib==1.2.0
-cachecontrol==0.13.1
+CacheControl==0.13.1
 cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
@@ -34,7 +34,6 @@ h11==0.14.0
 httplib2==0.22.0
 httptools==0.5.0
 idna==3.4
-lancedb==0.1.5
 langchain==0.0.189
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -56,7 +55,6 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.8
 PyJWT==2.7.0
-pylance==0.4.18
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -74,8 +72,8 @@ starlette==0.27.0
 tenacity==8.2.2
 tiktoken==0.4.0
 tqdm==4.65.0
-typing-extensions==4.6.3
 typing-inspect==0.9.0
+typing_extensions==4.6.3
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.6
