--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "event-source-polyfill": "^1.0.31",
     "firebase": "^9.22.2",
     "html-react-parser": "^4.0.0",
     "markdown-to-jsx": "^7.2.1",
