--- a/fastapi/dockerfile
+++ b/fastapi/dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.10.10-slim-bullseye
 
+WORKDIR /app
+
 COPY ./requirements.txt ./requirements.txt
+COPY ./bookmarkai-c7f69-0e7393f3fe4e.json ./bookmarkai-c7f69-0e7393f3fe4e.json
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y build-essential
 RUN pip install -r requirements.txt
-
-COPY . .
 
 CMD ["python", "main.py"]
