--- a/fastapi/local.yml
+++ b/fastapi/local.yml
@@ -15,7 +15,7 @@ services:
   fastapi:
     build:
       context: .
-      dockerfile: ./dockerfile
+      dockerfile: compose/local/dockerfile
     ports:
       - "8000:8000"
     volumes:
