--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "BookmarkAI",
-  "version": "1.0",
+  "name": "Supermark.ai",
+  "version": "0.1.0",
   "manifest_version": 3,
-  "permissions": ["activeTab", "cookies", "scripting", "storage"],
+  "permissions": ["activeTab", "cookies"],
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html"
