--- a/fastapi/production.yml
+++ b/fastapi/production.yml
@@ -9,4 +9,6 @@ services:
       - "8000:8000"
     env_file:
       - ./config/.env.prod
+    environment:
+      - PORT=${PORT}
     working_dir: /app
