--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^3.12.1",
+    "@hotjar/browser": "^1.0.9",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +23,7 @@
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
