--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-ga4": "^2.1.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
