--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^3.12.1",
-    "@mozilla/readability": "^0.4.4",
     "@hotjar/browser": "^1.0.9",
+    "@mozilla/readability": "^0.4.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,8 +25,9 @@
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
     "react-ga4": "^2.1.0",
+    "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
