--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-ga4": "^2.1.0",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.1.2",
     "react-responsive": "^9.0.2",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
