--- a/fastapi/compose/prod/dockerfile
+++ b/fastapi/compose/prod/dockerfile
@@ -11,4 +11,4 @@ RUN pip install -r requirements.txt
 
 COPY ../../ .
 
-CMD uvicorn main:app --host 0.0.0.0 --port $PORT
+CMD hypercorn main:app --config file:hypercorn_config.py
