--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -33,6 +33,7 @@ grpcio-status==1.54.2
 h11==0.14.0
 httplib2==0.22.0
 httptools==0.5.0
+hypercorn==0.14.3
 idna==3.4
 langchain==0.0.189
 marshmallow==3.19.0
